import MockDate from "mockdate";
import nock from "nock";
import { OPEN_ID_CONFIGURATION_RESPONSE } from "../__fixtures__/auth0.js";
import {
  type ConduitClientCredentialsCache,
  type ConduitClientCredentialsMiddlewareFactory,
  conduitClientCredentialsMiddlewareFactory,
} from "./conduit-client-credentials-middleware.js";
import { beforeAll, beforeEach, describe, expect, test, vi } from "vitest";

const MockedDate = new Date("2024-01-01T00:00:00.000Z");
MockDate.set(MockedDate);

describe("conduit-client-credentials-middleware", () => {
  const cache: ConduitClientCredentialsCache = [];

  let ctx: any;
  let factory: ConduitClientCredentialsMiddlewareFactory;

  const configScope = nock("https://lindorm.eu.auth0.com")
    .get("/.well-known/openid-configuration")
    .times(1)
    .reply(200, OPEN_ID_CONFIGURATION_RESPONSE);

  beforeAll(() => {
    factory = conduitClientCredentialsMiddlewareFactory(
      {
        clientId: "clientId",
        clientSecret: "clientSecret",
        clockTolerance: 0,
        issuer: "https://lindorm.eu.auth0.com/",
      },
      cache,
    );
  });

  beforeEach(() => {
    ctx = {
      req: { headers: {} },
    };
  });

  describe("with resource", () => {
    test("should return a middleware", async () => {
      const tokenScope = nock("https://lindorm.eu.auth0.com")
        .post("/oauth/token")
        .times(1)
        .reply(200, {
          access_token: "access_token",
          expires_in: 10,
          token_type: "Bearer",
        });

      const middleware = await factory({ resource: "https://identity.lindorm-io" });

      expect(configScope.isDone()).toEqual(true);
      expect(tokenScope.isDone()).toEqual(true);

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });

      expect(cache).toMatchSnapshot();
    });

    test("should return middleware with cached data", async () => {
      const middleware = await factory({ resource: "https://identity.lindorm-io" });

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });

      expect(cache).toMatchSnapshot();
    });

    test("should return middleware with timeout data", async () => {
      const scope = nock("https://lindorm.eu.auth0.com")
        .post("/oauth/token")
        .times(1)
        .reply(200, {
          access_token: "access_token",
          expires_in: 10,
          token_type: "Bearer",
        });

      MockDate.set("2024-01-01T00:00:30.000Z");

      const middleware = await factory({ resource: "https://identity.lindorm-io" });

      expect(scope.isDone()).toEqual(true);

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });

      expect(cache).toMatchSnapshot();
    });

    test("should return a middleware with new data", async () => {
      const scope = nock("https://lindorm.eu.auth0.com")
        .post("/oauth/token")
        .times(1)
        .reply(200, {
          access_token: "access_token",
          expires_in: 10,
          token_type: "Bearer",
        });

      const middleware = await factory({ resource: "https://test.lindorm.io" });

      expect(scope.isDone()).toEqual(true);

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });

      expect(cache).toMatchSnapshot();
    });
  });

  describe("without resource", () => {
    test("should return a middleware", async () => {
      const scope = nock("https://lindorm.eu.auth0.com")
        .post("/oauth/token")
        .times(1)
        .reply(200, {
          access_token: "access_token",
          expires_in: 10,
          token_type: "Bearer",
        });

      const middleware = await factory();

      expect(configScope.isDone()).toEqual(true);
      expect(scope.isDone()).toEqual(true);

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });

      expect(cache).toMatchSnapshot();
    });

    test("should return middleware with cached data", async () => {
      const middleware = await factory();

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });

      expect(cache).toMatchSnapshot();
    });
  });

  describe("with internal cache", () => {
    let ctx: any;
    let factory: ConduitClientCredentialsMiddlewareFactory;

    nock("https://lindorm.jp.auth0.com")
      .get("/.well-known/openid-configuration")
      .times(1)
      .reply(200, {
        ...OPEN_ID_CONFIGURATION_RESPONSE,
        token_endpoint: "https://lindorm.jp.auth0.com/oauth/token",
      });

    nock("https://lindorm.jp.auth0.com").post("/oauth/token").times(1).reply(200, {
      access_token: "access_token",
      expires_in: 10,
      token_type: "Bearer",
    });

    beforeAll(() => {
      factory = conduitClientCredentialsMiddlewareFactory({
        clientId: "clientId",
        clientSecret: "clientSecret",
        clockTolerance: 0,
        issuer: "https://lindorm.jp.auth0.com/",
      });
    });

    beforeEach(() => {
      ctx = {
        req: { headers: {} },
      };
    });

    test("should return a middleware", async () => {
      const middleware = await factory();

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });
    });

    test("should return middleware with cached data", async () => {
      const middleware = await factory();

      await expect(middleware(ctx, vi.fn())).resolves.toBeUndefined();

      expect(ctx.req.headers).toEqual({
        Authorization: "Bearer access_token",
      });
    });
  });

  describe("defaultExpiration TTL calculation", () => {
    test("should calculate TTL as future timestamp when using defaultExpiration", async () => {
      const cache: ConduitClientCredentialsCache = [];

      nock("https://lindorm.se.auth0.com")
        .get("/.well-known/openid-configuration")
        .times(1)
        .reply(200, {
          ...OPEN_ID_CONFIGURATION_RESPONSE,
          token_endpoint: "https://lindorm.se.auth0.com/oauth/token",
        });

      nock("https://lindorm.se.auth0.com").post("/oauth/token").times(1).reply(200, {
        access_token: "access_token_default",
        token_type: "Bearer",
      });

      const factory = conduitClientCredentialsMiddlewareFactory(
        {
          clientId: "clientId",
          clientSecret: "clientSecret",
          clockTolerance: 0,
          issuer: "https://lindorm.se.auth0.com/",
          defaultExpiration: 300,
        },
        cache,
      );

      const middleware = await factory();

      expect(cache.length).toEqual(1);
      expect(cache[0].ttl).toBeGreaterThan(Date.now());
      expect(cache[0].ttl).toBeLessThanOrEqual(Date.now() + 300 * 1000);
    });
  });

  describe("replaceInCache removes expired entries", () => {
    test("should remove expired cache entries during iteration", async () => {
      const cache: ConduitClientCredentialsCache = [];

      nock("https://lindorm.no.auth0.com")
        .get("/.well-known/openid-configuration")
        .times(1)
        .reply(200, {
          ...OPEN_ID_CONFIGURATION_RESPONSE,
          token_endpoint: "https://lindorm.no.auth0.com/oauth/token",
        });

      nock("https://lindorm.no.auth0.com").post("/oauth/token").times(2).reply(200, {
        access_token: "access_token_test",
        expires_in: 1,
        token_type: "Bearer",
      });

      const factory = conduitClientCredentialsMiddlewareFactory(
        {
          clientId: "clientId",
          clientSecret: "clientSecret",
          clockTolerance: 0,
          issuer: "https://lindorm.no.auth0.com/",
        },
        cache,
      );

      await factory({ resource: "https://test.resource" });

      expect(cache.length).toEqual(1);

      MockDate.set(new Date("2024-01-01T00:00:05.000Z"));

      await factory({ resource: "https://test.resource" });

      expect(cache.length).toEqual(1);
    });
  });

  describe("missing tokenEndpoint validation", () => {
    test("should throw BadGatewayError when OIDC discovery does not return tokenEndpoint", async () => {
      nock("https://lindorm.fi.auth0.com")
        .get("/.well-known/openid-configuration")
        .times(1)
        .reply(200, {
          ...OPEN_ID_CONFIGURATION_RESPONSE,
          token_endpoint: undefined,
        });

      const factory = conduitClientCredentialsMiddlewareFactory({
        clientId: "clientId",
        clientSecret: "clientSecret",
        clockTolerance: 0,
        issuer: "https://lindorm.fi.auth0.com/",
      });

      await expect(factory()).rejects.toThrow(
        "Token endpoint not found in OpenID configuration",
      );
    });
  });

  describe("concurrent factory calls token deduplication", () => {
    test("should share same in-flight token promise when called concurrently", async () => {
      const cache: ConduitClientCredentialsCache = [];

      nock("https://lindorm.dk.auth0.com")
        .get("/.well-known/openid-configuration")
        .times(1)
        .reply(200, {
          ...OPEN_ID_CONFIGURATION_RESPONSE,
          token_endpoint: "https://lindorm.dk.auth0.com/oauth/token",
        });

      // Only mock ONE token request - if deduplication works, both calls share this request
      nock("https://lindorm.dk.auth0.com").post("/oauth/token").times(1).reply(200, {
        access_token: "shared_token",
        expires_in: 300,
        token_type: "Bearer",
      });

      const factory = conduitClientCredentialsMiddlewareFactory(
        {
          clientId: "clientId",
          clientSecret: "clientSecret",
          clockTolerance: 0,
          issuer: "https://lindorm.dk.auth0.com/",
        },
        cache,
      );

      // Call factory twice concurrently with same resource
      const [middleware1, middleware2] = await Promise.all([
        factory({ resource: "https://shared.resource" }),
        factory({ resource: "https://shared.resource" }),
      ]);

      const ctx1: any = { req: { headers: {} } };
      const ctx2: any = { req: { headers: {} } };

      await middleware1(ctx1, vi.fn());
      await middleware2(ctx2, vi.fn());

      // Both should have the same token
      expect(ctx1.req.headers.Authorization).toBe("Bearer shared_token");
      expect(ctx2.req.headers.Authorization).toBe("Bearer shared_token");

      // Cache should only have one entry
      expect(cache.length).toBe(1);
    });
  });

  describe("with dpop", () => {
    const dpopSigner = {
      algorithm: "ES256" as const,
      publicJwk: { kty: "EC", crv: "P-256", x: "x-val", y: "y-val" } as any,
      sign: vi.fn(async () => new Uint8Array([9, 9, 9, 9])),
    };

    test("should present a DPoP proof on the token endpoint request and return a DPoP-bound middleware", async () => {
      const dpopCache: ConduitClientCredentialsCache = [];
      const dpopFactory = conduitClientCredentialsMiddlewareFactory(
        {
          clientId: "clientId",
          clientSecret: "clientSecret",
          clockTolerance: 0,
          dpopSigner,
          issuer: "https://lindorm.dk.auth0.com/",
          tokenUri: "https://lindorm.dk.auth0.com/oauth/token",
        },
        dpopCache,
      );

      let observedDpopHeader: string | undefined;
      nock("https://lindorm.dk.auth0.com")
        .post("/oauth/token")
        .times(1)
        .reply(200, function () {
          observedDpopHeader = this.req.headers.dpop as string;
          return {
            access_token: "bound_access_token",
            expires_in: 10,
            token_type: "DPoP",
          };
        });

      const middleware = await dpopFactory({ resource: "https://identity.lindorm-io" });

      expect(observedDpopHeader).toEqual(expect.stringMatching(/^.+\..+\..+$/));

      // The proof on the token endpoint should have htm=POST and htu=tokenUri,
      // with NO ath claim (there's no access token yet).
      const [, payloadB64] = observedDpopHeader!.split(".");
      const payload = JSON.parse(Buffer.from(payloadB64, "base64url").toString("utf-8"));
      expect(payload.htm).toEqual("POST");
      expect(payload.htu).toEqual("https://lindorm.dk.auth0.com/oauth/token");
      expect(payload).not.toHaveProperty("ath");

      const ctx: any = {
        req: {
          config: { method: "GET" },
          headers: {},
          url: "https://api.example.com/orders",
        },
      };

      await middleware(ctx, vi.fn());

      expect(ctx.req.headers.Authorization).toEqual("DPoP bound_access_token");
      expect(ctx.req.headers.DPoP).toEqual(expect.stringMatching(/^.+\..+\..+$/));
    });
  });

  describe("token request wire shape", () => {
    test("should post snake_case JSON carrying the RFC 8707 resource indicator", async () => {
      let observedBody: unknown;

      nock("https://lindorm.is.auth0.com")
        .post("/oauth/token", (body) => {
          observedBody = body;
          return true;
        })
        .times(1)
        .reply(200, {
          access_token: "access_token",
          expires_in: 10,
          token_type: "Bearer",
        });

      const factory = conduitClientCredentialsMiddlewareFactory({
        clientId: "clientId",
        clientSecret: "clientSecret",
        clockTolerance: 0,
        issuer: "https://lindorm.is.auth0.com/",
        tokenUri: "https://lindorm.is.auth0.com/oauth/token",
      });

      await factory({
        resource: "https://identity.lindorm.io",
        scope: ["read", "write"],
      });

      expect(observedBody).toMatchSnapshot();
    });

    test("should post snake_case form fields carrying the RFC 8707 resource indicator", async () => {
      let observedBody: unknown;

      nock("https://lindorm.gl.auth0.com")
        .post("/oauth/token", (body) => {
          observedBody = body;
          return true;
        })
        .times(1)
        .reply(200, {
          access_token: "access_token",
          expires_in: 10,
          token_type: "Bearer",
        });

      const factory = conduitClientCredentialsMiddlewareFactory({
        clientId: "clientId",
        clientSecret: "clientSecret",
        clockTolerance: 0,
        contentType: "application/x-www-form-urlencoded",
        issuer: "https://lindorm.gl.auth0.com/",
        tokenUri: "https://lindorm.gl.auth0.com/oauth/token",
      });

      await factory({
        resource: "https://identity.lindorm.io",
        scope: ["read", "write"],
      });

      expect(observedBody).toMatchSnapshot();
    });

    test("should omit the resource parameter when no resource is requested", async () => {
      let observedBody: unknown;

      nock("https://lindorm.fo.auth0.com")
        .post("/oauth/token", (body) => {
          observedBody = body;
          return true;
        })
        .times(1)
        .reply(200, {
          access_token: "access_token",
          expires_in: 10,
          token_type: "Bearer",
        });

      const factory = conduitClientCredentialsMiddlewareFactory({
        clientId: "clientId",
        clientSecret: "clientSecret",
        clockTolerance: 0,
        issuer: "https://lindorm.fo.auth0.com/",
        tokenUri: "https://lindorm.fo.auth0.com/oauth/token",
      });

      await factory();

      expect(observedBody).toMatchSnapshot();
    });
  });
});
