// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`conduit-client-credentials-middleware > token request wire shape > should omit the resource parameter when no resource is requested 1`] = `
{
  "client_id": "clientId",
  "client_secret": "clientSecret",
  "grant_type": "client_credentials",
}
`;

exports[`conduit-client-credentials-middleware > token request wire shape > should post snake_case JSON carrying the RFC 8707 resource indicator 1`] = `
{
  "client_id": "clientId",
  "client_secret": "clientSecret",
  "grant_type": "client_credentials",
  "resource": "https://identity.lindorm.io",
  "scope": "read write",
}
`;

exports[`conduit-client-credentials-middleware > token request wire shape > should post snake_case form fields carrying the RFC 8707 resource indicator 1`] = `
{
  "client_id": "clientId",
  "client_secret": "clientSecret",
  "grant_type": "client_credentials",
  "resource": "https://identity.lindorm.io",
  "scope": "read write",
}
`;

exports[`conduit-client-credentials-middleware > with resource > should return a middleware 1`] = `
[
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://identity.lindorm-io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067210000,
  },
]
`;

exports[`conduit-client-credentials-middleware > with resource > should return a middleware with new data 1`] = `
[
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://identity.lindorm-io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://test.lindorm.io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;

exports[`conduit-client-credentials-middleware > with resource > should return middleware with cached data 1`] = `
[
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://identity.lindorm-io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067210000,
  },
]
`;

exports[`conduit-client-credentials-middleware > with resource > should return middleware with timeout data 1`] = `
[
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://identity.lindorm-io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;

exports[`conduit-client-credentials-middleware > without resource > should return a middleware 1`] = `
[
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://identity.lindorm-io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://test.lindorm.io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "_@DEFAULT",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;

exports[`conduit-client-credentials-middleware > without resource > should return middleware with cached data 1`] = `
[
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://identity.lindorm-io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "https://test.lindorm.io",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
  {
    "accessToken": "access_token",
    "issuer": "https://lindorm.eu.auth0.com/",
    "resource": "_@DEFAULT",
    "scope": [],
    "tokenType": "Bearer",
    "tokenUri": "https://lindorm.eu.auth0.com/oauth/token",
    "ttl": 1704067240000,
  },
]
`;
